data/derived/fa15/progs/unify/prog2127.ml.out
Characters 60-64:
  wwhile (b, funt);;
             ^^^^
Error: This expression has type (('a -> 'a * bool) -> 'a -> 'a * bool) * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside
       (('a -> 'a * bool) -> 'a -> 'a * bool) * bool
